<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">


        <RelativeLayout
            android:id="@+id/relave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/RLTopLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="0dp"
                android:visibility="visible">

                <RelativeLayout
                    android:id="@+id/rl1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_for_instagram">

                    <ImageView
                        android:id="@+id/imBack"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="10dp"
                        android:backgroundTint="@color/white"
                        android:padding="5dp"
                        android:src="@drawable/btn_back" />

                    <TextView
                        android:id="@+id/activityname"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="Instagram"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_14ssp"
                        android:textStyle="bold"></TextView>

                    <pl.droidsonroids.gif.GifImageView
                        android:id="@+id/imInfo"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="10dp"
                        android:padding="@dimen/_2sdp"
                        android:src="@drawable/qureka_one" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/rl1">

                    <RelativeLayout
                        android:id="@+id/LLOpenInstagram"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/rl1"
                        android:layout_centerInParent="true"
                      android:background="@color/white"
                        tools:ignore="NotSibling">

                        <RelativeLayout
                            android:id="@+id/RLLoginInstagram"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/rl1"
                            android:layout_marginTop="0.1dp"
                            android:background="@drawable/background_for_instagram"
                            android:layout_alignParentTop="true"
                            android:layout_centerHorizontal="true"
                            tools:ignore="NotSibling">

                            <TextView
                                android:id="@+id/tvLoginInstagram"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerVertical="true"
                                android:fontFamily="@font/poppins_regular"
                                android:padding="10dp"
                                android:text="@string/download_from_private_account"
                                android:textColor="@color/white"
                                android:textSize="15dp" />

                            <Switch
                                android:id="@+id/SwitchLogin"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerVertical="true"
                                android:layout_marginLeft="@dimen/_70sdp"
                                android:layout_toRightOf="@+id/tvLoginInstagram"
                                android:clickable="false"
                                android:text=""
                                android:theme="@style/SCBSwitch" />

                        </RelativeLayout>
                    </RelativeLayout>

                </RelativeLayout>

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/lnr_main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/RLTopLayout"
                android:layout_marginTop="@dimen/_20sdp"
                android:orientation="vertical"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="10dp">

                <RelativeLayout
                    android:id="@+id/RLEdittextLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rectangle_white"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:elevation="10dp"
                    android:padding="10dp">

                    <EditText
                        android:id="@+id/et_text"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:background="@drawable/ads_back"
                        android:hint="@string/paste_link"
                        android:padding="15dp"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textColorHint="#787878"
                        android:textSize="15sp" />


                    <LinearLayout
                        android:id="@+id/RLDownloadLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/et_text"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal"
                        android:weightSum="2">

                        <TextView
                            android:id="@+id/login_btn1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="2dp"
                            android:layout_weight="1"
                            android:background="@drawable/btn_background"
                            android:gravity="center"
                            android:padding="14dp"
                            android:text="@string/download"
                            android:textAllCaps="false"
                            android:textColor="@color/white"
                            android:textSize="@dimen/download_txt_size" />

                        <TextView
                            android:id="@+id/tv_paste"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="2dp"
                            android:layout_weight="1"
                            android:background="@drawable/btn_background"
                            android:gravity="center"
                            android:padding="14dp"
                            android:text="@string/paste"
                            android:textAllCaps="false"
                            android:textColor="@color/white"
                            android:textSize="@dimen/paste_txt_size" />

                    </LinearLayout>
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/frmad"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="5dp"
                    android:visibility="gone"
                    android:background="@drawable/ads_back"
                    android:elevation="8dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="5dp">

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvViewStories"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/view_stories"
                        android:textColor="@color/black"
                        android:textSize="13dp" />

                    <TextView
                        android:id="@+id/tvLogin"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/RLM"
                        android:layout_margin="5dp"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/btn_background"
                        android:gravity="center"
                        android:padding="8dp"
                        android:text="@string/login"
                        android:textColor="@color/white" />
                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/RVUserList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:nestedScrollingEnabled="false"
                    tools:listitem="@layout/item_user_list" />

                <ProgressBar
                    android:id="@+id/pr_loading_bar"
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="#000000"
                    android:indeterminate="true"
                    android:visibility="gone" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/RVStories"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:nestedScrollingEnabled="false"
                    tools:listitem="@layout/items_whatsapp_view" />

            </LinearLayout>


        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:id="@+id/bottom_btn"
            android:layout_marginBottom="@dimen/_5sdp"
            android:layout_above="@id/adView"
            android:layout_marginLeft="@dimen/_30sdp"
            android:layout_marginRight="@dimen/_30sdp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/insta"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_34sdp"
                android:layout_margin="2dp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_weight="1"
                android:background="@drawable/btn_background"
                android:gravity="center"
                android:text="Instagram"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_12ssp"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/download"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_34sdp"
                android:layout_margin="2dp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_weight="1"
                android:background="@drawable/btn_background"
                android:gravity="center"
                android:text="Download"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_12ssp" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:id="@+id/adView"
            android:gravity="center"
            android:layout_centerInParent="true"
            android:layout_alignParentBottom="true"
            android:layout_height="wrap_content">


        </RelativeLayout>

    </RelativeLayout>
</layout>
